# char-similar

./: README.md  pyproject.toml  requirements.txt
char_similar_z/: __init__.py  char_similarity_std.py  path_config.py
src/char_similar_z/: __init__.py  char_similarity_std.py  path_config.py
tests/: test_similar.py
